<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".MainActivity">

    <item
        android:id="@+id/action_settings"
        android:orderInCategory="100"
        android:title="@string/app_settings"
        app:showAsAction="never"
        >
    </item>

    <item
        android:id="@+id/action_addNewRecord"
        android:orderInCategory="200"
        android:title="@string/add_newRecord"
        app:showAsAction="ifRoom"
        android:icon="@drawable/ic_plus"
        >
    </item>

    <item
        android:id="@+id/action_share"
        android:orderInCategory="300"
        android:title="@string/share"
        app:showAsAction="always"
        android:icon="@drawable/ic_share"
        >
    </item>

    <item
        android:id="@+id/action_delete"
        android:orderInCategory="50"
        android:title="@string/deleteAll"
        app:showAsAction="never">
    </item>

</menu>