<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.adarshhonawad.recbunks.AddNewRecord">

    <include
        android:id="@+id/tool_bar"
        layout="@layout/tool_bar"
        ></include>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/new_subject"
        android:id="@+id/textView"
        android:layout_marginTop="41dp"
        android:layout_below="@id/tool_bar"
        android:layout_centerHorizontal="true"
        android:textStyle="bold"
        android:textSize="@dimen/abc_text_size_headline_material"
        android:textColor="#1370ea" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="25dp"
        android:id="@+id/errorText"
        android:layout_below="@+id/textView"
        android:textColor="#ed1717" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/new_subject_name"
        android:id="@+id/newSubjectText"
        android:padding="16dp"
        android:paddingEnd="32dp"
        android:layout_below="@+id/textView"
        android:layout_alignParentStart="true"
        android:layout_marginTop="50dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/new_subject_maxBunks"
        android:padding="16dp"
        android:id="@+id/newMaxBunksText"
        android:layout_below="@+id/newSubjectText"
        android:layout_alignParentStart="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/new_subject_currentBunks"
        android:padding="16dp"
        android:id="@+id/newCurrBunksText"
        android:layout_below="@+id/newMaxBunksText"
        android:layout_alignParentStart="true" />

    <EditText
        android:layout_width="180dp"
        android:layout_height="wrap_content"
        android:id="@+id/newSubjectInput"
        android:layout_alignBottom="@id/newSubjectText"
        android:layout_toEndOf="@+id/newSubjectText" />

    <EditText
        android:layout_width="180dp"
        android:layout_height="wrap_content"
        android:inputType="number"
        android:ems="10"
        android:maxLength="2"
        android:id="@+id/newMaxBunksInput"
        android:layout_alignBottom="@+id/newMaxBunksText"
        android:layout_toEndOf="@+id/newSubjectText" />

    <EditText
        android:layout_width="180dp"
        android:layout_height="wrap_content"
        android:inputType="number"
        android:ems="10"
        android:id="@+id/newCurrBunksInput"
        android:maxLength="2"
        android:layout_alignBottom="@+id/newCurrBunksText"
        android:layout_alignStart="@+id/newMaxBunksInput" />

    <View
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:id="@+id/fakeView"
        android:layout_below="@+id/newCurrBunksText"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="57dp"
        >
    </View>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/addButton"
        android:layout_below="@+id/newCurrBunksText"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="57dp"
        android:layout_alignRight="@id/fakeView"
        android:layout_marginRight="15dp"
        android:onClick="addButtonPressed"
        android:text="@string/button_add"/>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/finishButton"
        android:layout_below="@+id/newCurrBunksText"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="57dp"
        android:layout_alignLeft="@id/fakeView"
        android:layout_marginLeft="15dp"
        android:onClick="finishButtonPressed"
        android:text="@string/button_finish" />


</RelativeLayout>
